[themes] make nicklist width fixed on mobile UI so text doesn't get cut off

--- a/css/glowingbear.css
+++ b/css/glowingbear.css
@@ -572,7 +572,6 @@ h2 span, h2 small {
 
     #nicklist {
         height: auto;
-        width: auto;
         padding: 35px 7px 35px 10px;
         text-align: center;
         -webkit-box-shadow: 0px 0px 120px #000;
